# kept

./: .pre-commit-config.yaml  COMMERCIAL_LICENSE.md  LICENSE  Makefile  RELEASING.md  docker-compose.yml
.cursor/rules/: linting-and-validation.mdc  testing-and-environment.mdc
apps/api/: .env.example  .gitignore  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py
apps/api/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py
apps/api/app/routers/: analytics.py  categories.py  ledger_entries.py  payment_methods.py  tag_suggestions.py
apps/api/app/schemas/: category.py  ledger_entry.py  payment_method.py
apps/api/app/services/: analytics.py  category.py  ledger_entry.py  payment_method.py  tag_suggestion.py
apps/api/docker/: postgres-init.sh
apps/api/tests/: __init__.py  conftest.py  test_analytics_api.py  test_categories_api.py  test_health.py  test_ledger_entries_api.py  test_payment_methods_api.py  test_schema.py  test_tag_suggestions_api.py
apps/api/tests/unit/: test_analytics_service.py  test_category_service.py  test_ledger_entry_schema.py  test_ledger_entry_service.py  test_payment_method_schema.py  test_payment_method_service.py  test_tag_suggestion_service.py
apps/mobile/: Makefile  (+7 more)
doc/: android-install.md  implementation-plan-be.md  implementation-plan-fe.md  master-plan.md  play-store-closed-test.md  play-store-listing.md  play-store-release.md  prd.md  rfc-001-expense-manager.md
docs/: index.html  privacy.html
scripts/: convert_expense_csv.py  ingest_expenses.py
(+79 files in other folders)
