[project]
name = "expense-manager-api"
version = "0.1.0"
description = "Expense Manager backend API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "psycopg2-binary>=2.9.0",
    "ruff>=0.15.2",
    "mypy>=1.19.1",
    "pre-commit>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
# Integration tests use the shared test DB; run them serially (do not use pytest-xdist -n).
markers = [
    "integration: mark test as integration (HTTP + DB; run serially, no -n).",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
